Initialized simple GUI & attempted to begin a storage system
Spent a while setting up javafx for the first time and then created a simple UI. I also began to deal with storage to have a continuous experience between boots of the app.